--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,9 @@ li{
 
 
 .contact-btn{
-    padding-left: 45%;
+    padding-left: 7.5rem;
     padding-bottom: 5rem;
 }
 
 .contact{
-    text-align: center;    
-}
+ padding-left: 7rem;}
