--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,6 +18,12 @@
     .header_area{
         margin-left: 2.2rem;
     }  
+    .contact-btn{
+        padding-left: 7.5rem;
+        }
+    
+    .contact{
+     padding-left: 7rem;}
 
     }
 
